--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,19 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @group %>
+<div class="category_show">
+  <%= link_to edit_group_path(@group), class:"card_link" do %>
+    <%= render @group %>
+  <% end %>
 
-<div>
-  <%= link_to "Edit this group", edit_group_path(@group) %> |
-  <%= link_to "Back to groups", groups_path %>
+  <div class="actions">
+    <%= button_to "Remove Category", @group, method: :delete, class: "app_button red_button" %>
+  </div>
 
-  <%= button_to "Destroy this group", @group, method: :delete %>
+  <h2>Expenses</h2>
+
+  <div class="cards_list">
+    <%= render @group.expenses.order(created_at: :desc) %>
+  </div>
+
+  <%= link_to "New Expense", new_group_expense_path(@group), class: "category_button" %>
 </div>
